Fix scrollbar positioning

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,12 +5,12 @@
   flex-direction: column;
   margin: 0 auto;
   max-width: 1050px;
-  overflow-y: auto;
   padding-top: 50px;
   z-index: 0;
 
   .content {
-    padding-top: 50px 10px;
+    margin: 50px 0;
+    overflow-y: auto;
 
     &.subHeaderOpen {
       padding: 75px 0;
